# guthrie

./: .gitignore  CMakeLists.txt  README.md
cmake/scripts/: preamble.txt
src/: electorate.cc  electorate.h  guthrie.cc  main.cc  survey.cc  survey.h
